Changed calendar url to point to new calendar. Eventually, this should not be hard-coded.

--- a/main/template.html
+++ b/main/template.html
@@ -132,7 +132,7 @@ b.contentWindow[g];t.write(p());t.close()}catch(x){b[k]=o+'d.write("'+p().replac
 	<!-- END Main -->
 	<!-- Footer -->
 	<div id="footer">
-		<p class="right">&copy; 2010 - Varun Ramesh &nbsp; Some Icons are Copyright © Yusuke Kamiyamane. &nbsp; Design by <a href="http://chocotemplates.com" target="_blank" title="The Sweetest CSS Templates WorldWide">Chocotemplates.com</a></p>
+		<p class="right">&copy; 2010 - Created by <a href="http://varunramesh.net/">Varun Ramesh</a>. | Some Icons &copy; Yusuke Kamiyamane. | Theme by <a href="http://chocotemplates.com" target="_blank" title="The Sweetest CSS Templates WorldWide">Chocotemplates.com</a></p>
 		<div class="cl">&nbsp;</div>
 	</div>
 	<!-- END Footer -->
