--- a/main/calendar.html
+++ b/main/calendar.html
@@ -5,7 +5,7 @@
 <center>
 <br>
 
-<iframe src="https://www.google.com/calendar/embed?pvttk=50f411f82971bce5a7c43106b4e0f37d&amp;showTitle=0&amp;showCalendars=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=hamiltonforensics.net_8iq75b8enqrro2pd1nkej04unc%40group.calendar.google.com&amp;color=%23125A12&amp;ctz=America%2FPhoenix" style=" border-width:0 " width="800" height="600" frameborder="0" scrolling="no"></iframe>
+<iframe src="https://www.google.com/calendar/embed?src=kriqpasfja2bsaa39djpjndfa8%40group.calendar.google.com&ctz=America/Phoenix" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 
 <br><br>
 </center>
