Added scroll bars to page editor.

--- a/admin/editpage.html
+++ b/admin/editpage.html
@@ -19,7 +19,7 @@
 								
 								<p>
 									<label>Content</label>
-									<textarea name="html" rows="50" cols="100">{{html}}</textarea>
+									<textarea name="html" rows="50" cols="100" style="overflow:scroll;" >{{html}}</textarea>
 								</p>	
 							
 						</div>
