Turned off autoescape for the forum templates.

--- a/forum/forum.html
+++ b/forum/forum.html
@@ -1,3 +1,5 @@
+{% autoescape off %}
+
 <link rel="stylesheet" href="milkyway/theme/stylesheet.css" type="text/css" /> 
 
 <div class="bc-tbl bc-div"> 
@@ -77,6 +79,6 @@
 	
  
 	<br clear="all" /> 
-
-
 </div>
+
+{% endautoescape %}
