--- a/forum/newtopic.html
+++ b/forum/newtopic.html
@@ -1,3 +1,5 @@
+{% autoescape off %}
+
 <link rel="stylesheet" href="milkyway/theme/stylesheet.css" type="text/css" /> 
 <script type="text/javascript" src="ckeditor/ckeditor.js"></script>
 
@@ -73,3 +75,5 @@
 
 
 </div>
+
+{% endautoescape %}
