--- a/forum/main.html
+++ b/forum/main.html
@@ -1,3 +1,5 @@
+{% autoescape off %}
+
 <link rel="stylesheet" href="milkyway/theme/stylesheet.css" type="text/css" /> 
 
 <div class="bc-tbl bc-div"> 
@@ -47,3 +49,5 @@
 	<div class="tbl-f-l"><div class="tbl-f-r"><div class="tbl-f-c">&nbsp;</div></div></div></div> 
 	</div> 
 	<br /> 
+	
+{% endautoescape %}
