--- a/forum/topic.html
+++ b/forum/topic.html
@@ -1,3 +1,6 @@
+{% autoescape off %}
+
+
 <link rel="stylesheet" href="milkyway/theme/stylesheet.css" type="text/css" /> 
 <script type="text/javascript" src="ckeditor/ckeditor.js"></script>
 
@@ -129,3 +132,5 @@
 	
 	
 </div>
+
+{% endautoescape %}
